Fixed .navList overflowing parent bug

--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -1,6 +1,6 @@
 .navList{
   margin-top: 20px;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
 }
